--- a/app/styles/less/footer.less
+++ b/app/styles/less/footer.less
@@ -6,6 +6,9 @@
 	padding-bottom: 30px;
 	color: @themeColor;
 	font-size: 11px;
+	display: none;
+	/*position:absolute;
+	bottom: 0px;*/
 	.sectionHead
 	{
 		color: #747b7e;
