--- a/src/app/components/header/index.scss
+++ b/src/app/components/header/index.scss
@@ -1,18 +1,44 @@
 @import '../../variable.scss';
 .mainHeader {
-  height: 70px;
   background-color: #fff;
   width: 100%;
+  position: relative;
+  justify-content: space-between;
+  .search_form{
+    padding: 0 15px;
+  }
+  .left {
+    display: flex;
+    align-items: center;
+  }
   img {
-    margin-top: 10px;
+    margin-top: 25px;
     width: 100px;
     height: 50px;
     padding-left: 20px;
+    float: left;
+  }
+  .phone {
+    float: left;
+    padding-left: 20px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    h4 {
+      font-size: 14px;
+      color: $themeColor;
+      @extend %sansRegular;
+      span {
+        padding-left: 5px;
+        font-weight: 700;
+      }
+    }
   }
   .right {
-    position: absolute;
-    right: 30px;
-    top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 30px;
     color: #000;
     a {
       cursor: pointer;
@@ -33,4 +59,5 @@
       }
     }
   }
+  .search_wrap {}
 }
