--- a/src/app/components/header/tpl.html
+++ b/src/app/components/header/tpl.html
@@ -1,6 +1,14 @@
-<div class="mainHeader">
-  <img src="./assets/images/logo-small.png"></img>
-  <div class="right">
+<div class="mainHeader" layout="row" layout-wrap>
+  <div class="left" flex="20" flex-md="50" flex-sm="50" flex-xs="100" flex-order-md="-1" flex-order-sm="-1" flex-order-xs="-1">
+    <img ng-click="$ctrl.goHome()" src="./assets/images/logo-small.png"></img>
+    <div class="phone">
+      <h4>Call <span>8767-270-270</span></h4>
+    </div>
+  </div>
+  <div ng-if="$ctrl.showSearch()" class="search_wrap" flex="60" flex-md="100" flex-sm="100" flex-xs="100" flex-order-md="2" flex-order-sm="2" flex-order-xs="2">
+    <ct-search></ct-search>
+  </div>
+  <div class="right" flex="20" flex-md="50" flex-sm="50" flex-xs="100" flex-order-md="1" flex-order-sm="1" flex-order-xs="1">
     <div class="anon" ng-show="!isLoggedIn()">
       <a ng-click="$ctrl.signin()">Login</a>
       <span>or</span>
