--- a/src/app/routes/checkout/order-place/tpl.html
+++ b/src/app/routes/checkout/order-place/tpl.html
@@ -14,7 +14,7 @@
   			</div>
   			<div class="total">
   				<span>Toatal:</span>
-  				<span>$<span>196</span><span>.00</span></span>
+  				<h4>$<span>196</span><span>.00</span></h4>
   			</div>
   			<div class="button">
   				<button class="btn btn-default btn-sm" ng-click="$ctrl.goSearch()"><i class="material-icons">arrow_backward</i>Back to Search</button>
