--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -136,7 +136,18 @@ html {
   >div{
   }
 }
-
+.glyphicon.custom-on{
+  width: 14px;
+  height: 18px;
+  background: url(../assets/images/on.png) no-repeat;
+  background-size: 100% 100%;
+}
+.glyphicon.custom-off{
+  width: 14px;
+  height: 18px;
+  background: url(../assets/images/off.png) no-repeat;
+  background-size: 100% 100%;
+}
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
