--- a/src/app/routes/listing/tpl.html
+++ b/src/app/routes/listing/tpl.html
@@ -33,7 +33,7 @@
           </div>
           <div class="right rating">
             <span>4.6</span>
-            <span uib-rating ng-model="$ctrl.rate" max="$ctrl.max" read-only="isReadonly" on-hover="$ctrl.hoveringOver(value)" on-leave="overStar = null" titles="['one','two','three']" aria-labelledby="default-rating"></span>
+            <span uib-rating ng-model="$ctrl.rate" max="$ctrl.max" read-only="isReadonly" titles="['one','two','three']" aria-labelledby="default-rating"></span>
           </div>
         </div>
       </div>
@@ -50,8 +50,7 @@
           <div class="spice">
             <h5 class="title">SPICE LEVEL:</h5>
             <span>5 of 5</span>
-            <span uib-rating ng-model="$ctrl.rate" max="$ctrl.max" read-only="isReadonly" on-hover="$ctrl.hoveringOver(value)" on-leave="overStar = null" titles="['one','two','three']" aria-labelledby="default-rating"></span>
-            <span class="label" ng-class="{'label-warning': $ctrl.percent<30, 'label-info': $ctrl.percent>=30 && percent<70, 'label-success': $ctrl.percent>=70}" ng-show="overStar && !$ctrl.isReadonly">{{$ctrl.percent}}%</span>
+            <span uib-rating ng-model="$ctrl.rate" max="$ctrl.max" read-only="$ctrl.isReadonly" state-on="'custom-on'" state-off="'custom-off'" titles="['one','two','three']" aria-labelledby="default-rating"></span>
           </div>
           <div class="type">
             <h5 class="title">TYPE:</h5>
