--- a/src/app/pages/home/dialog.tpl.html
+++ b/src/app/pages/home/dialog.tpl.html
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div class="skip_btn">
-      <md-button class="md-raise" ng-click="$ctrl.toSite()">Skip to site</md-button>
+      <md-button class="md-raise" ng-click="$ctrl.closeDlg()">Skip to site</md-button>
     </div>
   </md-dialog-content>
 </md-dialog>
