feat(API): integrate Locality API

--- a/src/app/pages/home/index.tpl.html
+++ b/src/app/pages/home/index.tpl.html
@@ -46,7 +46,7 @@
           <!-- <div class="mealImage"></div> -->
           <img bo-src="meal.imageURL"></img>
           <div class="mealInfo">
-            <h4 bo-text="meal.category"></h4>
+            <h4 bo-text="meal.name"></h4>
             <div class="chefInfo">
               <img bo-src="meal.providerImageURL"></img>
               <div class="chefDetails">
