--- a/src/app/components/search/tpl.html
+++ b/src/app/components/search/tpl.html
@@ -2,22 +2,22 @@
   <div class="col-sm-12 col-md-6">
     <!-- <input type="" name="" placeholder="Delivery Location"> -->
     <md-autocomplete
-      ng-disabled="$ctrl.isDisabled"
-      md-no-cache="$ctrl.noCache"
-      md-selected-item="$ctrl.selectedItem"
-      md-search-text-change="$ctrl.searchTextChange($ctrl.searchText)"
-      md-search-text="$ctrl.searchText"
-      md-selected-item-change="$ctrl.selectedItemChange(item)"
-      md-items="item in $ctrl.querySearch($ctrl.searchText)"
+      ng-disabled="$ctrl.locality.isDisabled"
+      md-no-cache="$ctrl.locality.noCache"
+      md-selected-item="$ctrl.locality.selectedItem"
+      md-search-text-change="$ctrl.locality.onSearchTextChange($ctrl.locality.searchText)"
+      md-search-text="$ctrl.locality.searchText"
+      md-selected-item-change="$ctrl.locality.onSelectItemChange(item)"
+      md-items="item in $ctrl.locality.querySearch($ctrl.locality.searchText)"
       md-item-text="item.display"
       md-min-length="0"
-      placeholder="What is your favorite US state?">
+      placeholder="Delivery Location">
       <md-item-template>
-        <span md-highlight-text="$ctrl.searchText" md-highlight-flags="^i">{{item.display}}</span>
+        <span md-highlight-text="$ctrl.locality.searchText" md-highlight-flags="^i">{{item.display}}</span>
       </md-item-template>
       <md-not-found>
-        No states matching "{{$ctrl.searchText}}" were found.
-        <a ng-click="$ctrl.newState($ctrl.searchText)">Create a new one!</a>
+        No localities matching "{{$ctrl.locality.searchText}}" were found.
+        <!-- <a ng-click="$ctrl.createNewLocality($ctrl.searchText)">Create a new one!</a> -->
       </md-not-found>
     </md-autocomplete>
   </div>
