--- a/src/app/components/search/tpl.html
+++ b/src/app/components/search/tpl.html
@@ -1,6 +1,25 @@
 <div class="search_form row">
   <div class="col-sm-12 col-md-6">
-    <input type="" name="" placeholder="Delivery Location">
+    <!-- <input type="" name="" placeholder="Delivery Location"> -->
+    <md-autocomplete
+      ng-disabled="$ctrl.isDisabled"
+      md-no-cache="$ctrl.noCache"
+      md-selected-item="$ctrl.selectedItem"
+      md-search-text-change="$ctrl.searchTextChange($ctrl.searchText)"
+      md-search-text="$ctrl.searchText"
+      md-selected-item-change="$ctrl.selectedItemChange(item)"
+      md-items="item in $ctrl.querySearch($ctrl.searchText)"
+      md-item-text="item.display"
+      md-min-length="0"
+      placeholder="What is your favorite US state?">
+      <md-item-template>
+        <span md-highlight-text="$ctrl.searchText" md-highlight-flags="^i">{{item.display}}</span>
+      </md-item-template>
+      <md-not-found>
+        No states matching "{{$ctrl.searchText}}" were found.
+        <a ng-click="$ctrl.newState($ctrl.searchText)">Create a new one!</a>
+      </md-not-found>
+    </md-autocomplete>
   </div>
   <div class="col-sm-12 col-md-6">
     <div class="col-sm-4 col-xs-6 no-padding-r">
