--- a/src/app/routes/home/index.scss
+++ b/src/app/routes/home/index.scss
@@ -209,7 +209,7 @@
         margin-bottom: 30px;
         >img{
           width: 100%;
-          min-height: 203px;
+          height: auto;
         }
         .mealImage {
           width: 100%;
@@ -221,22 +221,6 @@
         .mealInfo {
           padding: 10px;
           padding-left: 15px;
-          >h4 {
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            line-height: 20px;
-            height: 42px;
-          }
-          // column-count: 2;
-          // column-gap: 20px;
-          // -moz-column-count: 2;
-          // -moz-column-gap: 20px;
-          // -webkit-column-count: 2;
-          // -webkit-column-gap: 20px;
-          // height: 150px;
-          // padding-bottom: 10px;
         }
         .chefInfo {
           margin-top: 15px;
