feat(API): integrate promotion API

--- a/src/app/pages/home/index.tpl.html
+++ b/src/app/pages/home/index.tpl.html
@@ -14,7 +14,7 @@
   <div class="page_wrap row mainContent">
     <div class="col-sm-12">
       <div class="col-sm-7 cauroselContainer">
-        <h3>Deals & Promotions <span ng-click="$ctrl.goResult()">All Deals<i class="material-icons">arrow_forward</i></span></h3>
+        <h3>Deals & Promotions <span ng-click="$ctrl.showAllDeals()">All Deals<i class="material-icons">arrow_forward</i></span></h3>
         <div class="carousel">
         </div>
       </div>
