--- a/src/app/pages/home/index.scss
+++ b/src/app/pages/home/index.scss
@@ -66,7 +66,9 @@
     }
   }
   .mainContent {
-    margin-top: 30px;
+    margin-top: 0;
+    padding-top: 30px;
+    background-color: white;
     h3 {
       padding-left: 15px;
       margin-bottom: 20px;
