--- a/src/app/components/footer/index.scss
+++ b/src/app/components/footer/index.scss
@@ -1,5 +1,7 @@
 @import '../../variable.scss';
 .footer {
+  margin: 0;
+  width: 100%;
   margin-top: 40px;
   width: 100;
   background-color: #1b1d1e;
