feat(search): integrate search API

--- a/src/app/pages/home/index.tpl.html
+++ b/src/app/pages/home/index.tpl.html
@@ -62,7 +62,7 @@
           <div class="divider"></div>
           <div class="price">
             <div bo-text="meal.oldPrice" ng-show="meal.oldPrice"></div>
-            <div bo-text="meal.price"></div>
+            <div bo-text="'$' + meal.price"></div>
             <div>See More<i class="material-icons">arrow_forward</i></div>
           </div>
         </div>
