--- a/src/app/components/search/tpl.html
+++ b/src/app/components/search/tpl.html
@@ -29,7 +29,7 @@
       <input type="" name="">
     </div>
     <div class="col-sm-4 col-xs-12 text-center">
-      <md-button aria-label="search" ng-bind-html="$ctrl.searchBtn | trusted"></md-button>
+      <md-button aria-label="search" ng-bind-html="$ctrl.searchBtn | trusted" ng-click="$ctrl.showSearchResults()"></md-button>
     </div>
   </div>
 </div>
