--- a/src/app/pages/results/tpl.html
+++ b/src/app/pages/results/tpl.html
@@ -28,9 +28,9 @@
       </div>
     </div>
     <div class="results_body" layout="row" layout-wrap layout-padding>
-      <div class="results_item" flex="33" flex-sm="50" flex-xs="100" bindonce ng-repeat="item in $ctrl.meals track by item.id">
+      <div class="results_item" flex="33" flex-sm="50" flex-xs="100" bindonce ng-repeat="item in $ctrl.meals track by item.id" ng-click="$ctrl.goList()">
         <div class="mealWrapper">
-          <div class="mealImage"></div>
+          <img bo-src="item.imageURL"></img>
           <div class="mealInfo">
             <h4 bo-text="item.name"></h4>
             <div class="meal_info" layout="row">
